# goingmerry

./: .env.example  .gitignore  package-lock.json  package.json
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/ai/: __init__.py  groq_client.py
backend/db/: __init__.py  connection.py  models.py
backend/export/: __init__.py  excel.py  pdf.py  word.py
backend/routers/: __init__.py  ai.py  auth.py  documents.py  export.py
backend/services/: __init__.py  brave_search.py  errors.py  supabase_client.py  tavily_search.py
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/components/features/editor/: SectionEditor.tsx  SheetEditor.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: button.tsx  card.tsx  empty-state.tsx  input.tsx  signup-prompt.tsx  spinner.tsx  textarea.tsx  toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Home.tsx  Login.tsx  Signup.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
